{
  "version": 4,
  "terraform_version": "0.12.10",
  "serial": 8,
  "lineage": "083d230f-f0e5-6b2e-827c-8923ae8b2bd6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "MBAterraformRT2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-03dd7e02ff10958ef",
            "id": "rtb-03dd7e02ff10958ef",
            "owner_id": "265418156239",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "MBAterraformRT_private"
            },
            "vpc_id": "vpc-02b54256f348d78b5"
          },
          "depends_on": [
            "aws_vpc.MBAterraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "MBAterraformGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-06456a439b57d169c",
            "owner_id": "265418156239",
            "tags": {
              "Name": "MBAterraformGW"
            },
            "vpc_id": "vpc-02b54256f348d78b5"
          },
          "depends_on": [
            "aws_vpc.MBAterraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "MBAterraformRT1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed57ce837d49b101",
            "owner_id": "265418156239",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-06456a439b57d169c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "MBAterraformRT_Public"
            },
            "vpc_id": "vpc-02b54256f348d78b5"
          },
          "depends_on": [
            "aws_internet_gateway.MBAterraformGW",
            "aws_vpc.MBAterraformVPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "MBAterraformVPC",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:265418156239:vpc/vpc-02b54256f348d78b5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0898dab762ee6eccf",
            "default_route_table_id": "rtb-03dd7e02ff10958ef",
            "default_security_group_id": "sg-079a6eaa339e7e3aa",
            "dhcp_options_id": "dopt-e4ef048d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02b54256f348d78b5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-03dd7e02ff10958ef",
            "owner_id": "265418156239",
            "tags": {
              "Name": "MBAterraformVPC"
            }
          }
        }
      ]
    }
  ]
}